[gd_scene load_steps=50 format=2]

[ext_resource path="res://kaisouko_look.png" type="Texture" id=1]
[ext_resource path="res://MainMenu.gd" type="Script" id=2]
[ext_resource path="res://font/Code Vein Fonts/DroidSansMono.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://MainMenuStyleBox.tres" type="StyleBox" id=4]
[ext_resource path="res://background3.png" type="Texture" id=5]
[ext_resource path="res://krita/jean/jean_look.png" type="Texture" id=6]
[ext_resource path="res://ItemButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://PopUp.tscn" type="PackedScene" id=8]
[ext_resource path="res://kaisouko_look_default.png" type="Texture" id=9]
[ext_resource path="res://banner.png" type="Texture" id=10]
[ext_resource path="res://kaisouko_look_2p.png" type="Texture" id=11]
[ext_resource path="res://PopUpSkin.tscn" type="PackedScene" id=12]
[ext_resource path="res://openSkinMenu.gd" type="Script" id=13]
[ext_resource path="res://bazooka.png" type="Texture" id=16]
[ext_resource path="res://pickupCoin2.wav" type="AudioStream" id=17]
[ext_resource path="res://ost/Main_menu_theme.wav" type="AudioStream" id=18]
[ext_resource path="res://font/Code Vein Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=19]
[ext_resource path="res://theme/beat_theme.tres" type="Theme" id=20]
[ext_resource path="res://krita/kyou/kyou_look.png" type="Texture" id=21]

[sub_resource type="DynamicFont" id=1]
size = 128
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.137255, 0.168627, 0.14902, 1 )
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color( 0.133333, 0.843137, 0.317647, 1 )
border_blend = true

[sub_resource type="Animation" id=2]
length = 0.001

[sub_resource type="Animation" id=3]
resource_name = "color_start"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer/VBoxContainer/MarginContainer/Button:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.8, 0.960784, 0.796078, 1 ), Color( 0.423529, 0.956863, 0.407843, 1 ), Color( 0.8, 0.960784, 0.796078, 1 ) ]
}

[sub_resource type="DynamicFont" id=5]
size = 128
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "shining"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.537255, 0.968627, 0.317647, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer/VBoxContainer/MarginContainer/Button:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HBoxContainer/VBoxContainer/MarginContainer/Button:margin_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 256.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HBoxContainer/VBoxContainer2/MoneyLabel:margin_left")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HBoxContainer/VBoxContainer2/MoneyLabel:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("KaisoukoLook:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2128, 800 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Background3:offset")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "moving_background"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Background3:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.9 ),
"transitions": PoolRealArray( 0.5, 2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 10, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=33]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:custom_fonts/font:outline_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=34]
resource_name = "flash"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.356863, 0.878431, 0.352941, 1 ), Color( 0.243137, 0.905882, 0.87451, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:custom_fonts/font:outline_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0.913725, 1, 0.156863, 1 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2128, 800 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "main_idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( -2, -2, -2 ),
"update": 0,
"values": [ Vector2( 864, 800 ), Vector2( 879, 800 ), Vector2( 864, 800 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "main_start"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector2( -192, 800 ), Vector2( 864, 800 ) ]
}

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 78, 236 )

[sub_resource type="Animation" id=23]
resource_name = "2p"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 11 ) ]
}

[sub_resource type="Animation" id=24]
resource_name = "2p_b"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 21 ) ]
}

[sub_resource type="Animation" id=25]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 9 ) ]
}

[sub_resource type="Animation" id=22]
resource_name = "default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}

[sub_resource type="Animation" id=26]
resource_name = "mizugi"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}

[sub_resource type="Animation" id=27]
resource_name = "mizugi_b"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}

[sub_resource type="DynamicFont" id=30]
size = 34
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 19 )

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 976, 208 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "start"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.972549, 1, 0.494118, 1 ), Color( 0.545098, 1, 0.494118, 1 ), Color( 0.494118, 1, 0.894118, 1 ), Color( 0.494118, 0.678431, 1, 1 ), Color( 0.709804, 0.494118, 1, 1 ), Color( 1, 0.494118, 0.909804, 1 ), Color( 0.992157, 0.411765, 0.533333, 1 ), Color( 0.972549, 1, 0.494118, 1 ), Color( 0.545098, 1, 0.494118, 1 ), Color( 0.494118, 1, 0.894118, 1 ), Color( 0.494118, 0.678431, 1, 1 ), Color( 0.709804, 0.494118, 1, 1 ), Color( 1, 0.494118, 0.909804, 1 ), Color( 0.992157, 0.411765, 0.533333, 1 ), Color( 0.972549, 1, 0.494118, 1 ), Color( 0.545098, 1, 0.494118, 1 ), Color( 0.494118, 1, 0.894118, 1 ), Color( 0.494118, 0.678431, 1, 1 ), Color( 0.709804, 0.494118, 1, 1 ), Color( 1, 0.494118, 0.909804, 1 ), Color( 0.972549, 1, 0.494118, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 2, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 976, 208 ), Vector2( 976, 176 ), Vector2( 976, 208 ) ]
}

[sub_resource type="Animation" id=29]
resource_name = "menu_song_better"
length = 12.8
loop = true
tracks/0/type = "audio"
tracks/0/path = NodePath("../SongPlayer/AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 18 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=31]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../HBoxContainer/VBoxContainer2/ScrollContainer:theme")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 20 ) ]
}

[sub_resource type="Animation" id=32]
resource_name = "shine"
tracks/0/type = "value"
tracks/0/path = NodePath("../HBoxContainer/VBoxContainer2/ScrollContainer:theme")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 20 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer/VBoxContainer/MarginContainer/Button:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HBoxContainer/VBoxContainer/MarginContainer/Button:margin_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 256.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HBoxContainer/VBoxContainer2/MoneyLabel:margin_left")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HBoxContainer/VBoxContainer2/MoneyLabel:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("KaisoukoLook:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2128, 800 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Background3:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.352941, 0.352941, 0.352941, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Banner:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1072, 112 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Banner:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "start"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer/VBoxContainer/MarginContainer/Button:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HBoxContainer/VBoxContainer/MarginContainer/Button:margin_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ 638.0, 256.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HBoxContainer/VBoxContainer2/MoneyLabel:margin_left")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ 512.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HBoxContainer/VBoxContainer2/MoneyLabel:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Background3:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.2, 2.4, 2.6, 2.7, 2.9, 3 ),
"transitions": PoolRealArray( 1, 1, 0, 0, 0, 0, 0 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.223529, 0.223529, 0.223529, 1 ), Color( 0, 0, 0, 1 ), Color( 0.0372549, 0.0372549, 0.0372549, 1 ), Color( 0.0745098, 0.0745098, 0.0745098, 1 ), Color( 0.186274, 0.186274, 0.186274, 1 ), Color( 0.223529, 0.223529, 0.223529, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Banner:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector2( 1472, 208 ), Vector2( 976, 208 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Banner:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=28]
resource_name = "buy"
length = 0.4
tracks/0/type = "audio"
tracks/0/path = NodePath("SfxPlayer/AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 17 )
} ],
"times": PoolRealArray( 0 )
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 958.0
margin_bottom = 1080.0
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 958.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 256
custom_constants/margin_top = 64
custom_constants/margin_left = 256
custom_constants/margin_bottom = 64

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer/MarginContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 256.0
margin_top = 64.0
margin_right = 702.0
margin_bottom = 1016.0
size_flags_vertical = 3
custom_colors/font_color_focus = Color( 0.8, 0.960784, 0.796078, 1 )
custom_colors/font_color = Color( 0.8, 0.960784, 0.796078, 1 )
custom_colors/font_color_hover = Color( 0.411765, 0.933333, 0.396078, 1 )
custom_colors/font_color_pressed = Color( 0.8, 0.960784, 0.796078, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
shortcut_in_tooltip = false
text = "START"

[node name="AnimationPlayer" type="AnimationPlayer" parent="HBoxContainer/VBoxContainer/MarginContainer/Button"]
root_node = NodePath("../../../../..")
anims/RESET = SubResource( 2 )
anims/color_start = SubResource( 3 )

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 962.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3

[node name="MoneyLabel" type="Label" parent="HBoxContainer/VBoxContainer2"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 958.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 5 )
text = "$0"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="HBoxContainer/VBoxContainer2/MoneyLabel"]
anims/RESET = SubResource( 16 )
anims/shining = SubResource( 17 )

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/VBoxContainer2"]
margin_top = 154.0
margin_right = 958.0
margin_bottom = 1080.0
size_flags_vertical = 3
theme = ExtResource( 20 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/ScrollContainer"]
margin_right = 946.0
margin_bottom = 2222.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemButton2" parent="HBoxContainer/VBoxContainer2/ScrollContainer/VBoxContainer" instance=ExtResource( 7 )]
margin_bottom = 518.0
icon = ExtResource( 11 )
price = 5000
description = "Another skin that dev think is nice."
item_name = "2p"

[node name="ItemButton3" parent="HBoxContainer/VBoxContainer2/ScrollContainer/VBoxContainer" instance=ExtResource( 7 )]
margin_top = 522.0
margin_bottom = 1040.0
icon = ExtResource( 1 )
price = 5000
description = "Traditional animu style swimsuit."
item_name = "mizugi"

[node name="ItemButton4" parent="HBoxContainer/VBoxContainer2/ScrollContainer/VBoxContainer" instance=ExtResource( 7 )]
margin_top = 1044.0
margin_bottom = 1562.0
icon = ExtResource( 6 )
price = 5000
description = "Definately not from very popular gacha game XD"
item_name = "mizugi_b"

[node name="ItemButton5" parent="HBoxContainer/VBoxContainer2/ScrollContainer/VBoxContainer" instance=ExtResource( 7 )]
margin_top = 1566.0
margin_bottom = 2084.0
icon = ExtResource( 21 )
price = 5000
description = "That's pretty good"
item_name = "2p_b"

[node name="ItemButton6" parent="HBoxContainer/VBoxContainer2/ScrollContainer/VBoxContainer" instance=ExtResource( 7 )]
margin_top = 2088.0
margin_bottom = 2222.0
icon = ExtResource( 16 )
price = 9999999999
description = "Get all skins to unlock!"
item_name = "bazooka"

[node name="Background3" type="Sprite" parent="."]
modulate = Color( 0.352941, 0.352941, 0.352941, 1 )
position = Vector2( 968, 456 )
scale = Vector2( 1.65833, 1.76296 )
z_index = -100
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background3"]
root_node = NodePath("../..")
anims/RESET = SubResource( 9 )
anims/moving_background = SubResource( 10 )

[node name="KaisoukoLook" type="Sprite" parent="."]
position = Vector2( 2128, 800 )
texture = ExtResource( 9 )
flip_h = true
script = ExtResource( 13 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="KaisoukoLook"]
anims/RESET = SubResource( 33 )
anims/flash = SubResource( 34 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="KaisoukoLook"]
anims/RESET = SubResource( 12 )
anims/main_idle = SubResource( 14 )
anims/main_start = SubResource( 13 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="KaisoukoLook"]
visible = false
shape = SubResource( 21 )
shape_centered = false

[node name="Button" type="Button" parent="KaisoukoLook"]
margin_left = -80.0
margin_top = -256.0
margin_right = 80.0
margin_bottom = 224.0
flat = true

[node name="SpritePlayer" type="AnimationPlayer" parent="KaisoukoLook"]
anims/2p = SubResource( 23 )
anims/2p_b = SubResource( 24 )
anims/RESET = SubResource( 25 )
anims/default = SubResource( 22 )
anims/mizugi = SubResource( 26 )
anims/mizugi_b = SubResource( 27 )

[node name="Label" type="Label" parent="KaisoukoLook"]
margin_left = -80.0
margin_top = -256.0
margin_right = 57.0
margin_bottom = -208.0
custom_fonts/font = SubResource( 30 )
text = "Customize"

[node name="Banner" type="Sprite" parent="."]
position = Vector2( 1072, 112 )
texture = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Banner"]
anims/RESET = SubResource( 18 )
anims/start = SubResource( 19 )

[node name="SongPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimationPlayer")
anims/menu_song_better = SubResource( 29 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="SongPlayer"]
volume_db = -3.0

[node name="ScrollbarShinePlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimationPlayer")
anims/RESET = SubResource( 31 )
anims/shine = SubResource( 32 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 7 )
anims/start = SubResource( 6 )

[node name="SfxPlayer" type="AnimationPlayer" parent="."]
anims/buy = SubResource( 28 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="SfxPlayer"]
stream = ExtResource( 17 )

[node name="PopupSkin" parent="." instance=ExtResource( 12 )]
visible = false
margin_left = 256.0
margin_top = 128.0
margin_right = 1680.0
margin_bottom = 1040.0

[node name="PopUp" parent="." instance=ExtResource( 8 )]
visible = false
margin_left = 256.0
margin_top = 128.0
margin_right = 1680.0
margin_bottom = 1040.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
volume_db = -3.0
autoplay = true

[connection signal="pressed" from="HBoxContainer/VBoxContainer/MarginContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="KaisoukoLook/TouchScreenButton" to="PopupSkin" method="_on_TouchScreenButton_pressed"]
[connection signal="pressed" from="KaisoukoLook/Button" to="PopupSkin" method="_on_Button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
